--- a/vue-mobile/src/style.scss
+++ b/vue-mobile/src/style.scss
@@ -181,11 +181,14 @@ $spacing-sizes:(
 
 .nav{
     .nav-item{
-        border-bottom:3px solid transparent; 
-        padding-bottom: 0.2rem;
+        border-bottom:2px solid transparent; 
+        // padding: 3px;
+        // padding-bottom: 0.2rem;
     }
     .router-link-exact-active{
-        border-bottom:2px solid #fff; 
+        // padding: 3px;
+        font-weight: bold;
+        border-bottom:2px solid rgb(48, 8, 121); 
     }
 }
 
